# Dense-SLAM-based-on-VINS-CGI

./: README.md
catkin_ws/cgi_pcl/: CMakeLists.txt  package.xml
catkin_ws/cgi_pcl/include/: image_process.h
catkin_ws/cgi_pcl/launch/: cgi_pcl.launch
catkin_ws/cgi_pcl/src/: depth_estimator.cpp  depth_estimator_new.cpp  depth_to_pointcloud.cpp
catkin_ws/pcd_spliced/: package.xml
catkin_ws/pcd_spliced/config/: disk.yaml
catkin_ws/pcd_spliced/launch/: pcd_spliced.launch
catkin_ws/ros_pointcloud/: CMakeLists.txt
catkin_ws/ros_pointcloud/scripts/: Image_process.py  main_0120_teda.py
cgi_pcl/: package.xml
pcd_spliced/: CMakeLists.txt  package.xml
pcd_spliced/launch/: pcd_spliced.launch
pcd_spliced/src/: pcd.cpp  pcd_developed.cpp  pcd_old.cpp  pcd_spliced.cpp  plot_rf2o_odom.py
ros_pointcloud/: CMakeLists.txt  package.xml
ros_pointcloud/launch/: cgi_pcl.launch
ros_pointcloud/scripts/: Image_process.py  camera_params.xml  final.py  main.py  main_0120_teda.py
