<?xml version="1.0"?>
<package format="2">
  <name>cgi_pcl</name>
  <version>0.1.0</version>
  <description>Stereo depth processing package</description>

  <maintainer email="hsc316@qq.com">Upointer</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_conversions</depend>
  <depend>tf</depend>
  <depend>image_geometry</depend>
  <depend>OpenCV</depend>
  <depend>pcl_ros</depend>
  <depend>tinyxml2</depend>
  <depend>rospack</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
