<?xml version="1.0"?>
<package format="2">
  <name>pcd_spliced</name>
  <version>0.0.0</version>
  <description>The pcd_spliced package</description>


  <maintainer email="hsc316@qq.com">Upointer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>

  </export>
</package>
